--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
       <article>
         <!--  -->
         <div class="orangee">
-          <img src="images/icon-sedans.svg" aria-hidden="true">
-          <h2>Sedans</h2>
+          <img src="images/icon-sedans.svg" aria-hidden="true" alt="sedan car icon">
+          <h1>Sedans</h1>
           <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
           <button class="btn">learn more</button>
         </div>
           <!--  -->
         <div class="dark-cyan">
-          <img src="images/icon-suvs.svg" aria-hidden="true">
-          <h2>SUVs</h2>
+          <img src="images/icon-suvs.svg" alt="suv car icon" aria-hidden="true">
+          <h1>SUVs</h1>
           <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
           <button class="btn">learn more</button>
         </div>
           <!--  -->
         <div class="very-dark-cyan">
-          <img src="images/icon-luxury.svg" aria-hidden="true">
-          <h2>Luxury</h2>
+          <img src="images/icon-luxury.svg" aria-hidden="true" alt="luxury car icon">
+          <h1>Luxury</h1>
           <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
           <button class="btn">learn more</button>
         </div>
